add concept of team vs event team
